--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,38 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+body {
+    background-color: #efdcab !important;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.body {
+    background-color: #f2f6d0 !important;
+    text-align: center;
+    margin: 200px;
+    padding: 20px;
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.29);
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.poster:hover {
+    transition: 0.3s;
+    transform: scale(1.1);
 }
-
+.poster {
+    transition: 0.3s;
+    transform: scale(1);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.29);
+}
 @keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+    a:nth-of-type(2) .logo {
+        animation: logo-spin infinite 20s linear;
+    }
 }
