--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ body {
     padding: px;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.29);
     border-radius: 1em;
+    min-height: 300px !important;
 
 }
 .movieGrid{
