--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -1,11 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Special+Gothic+Condensed+One&display=swap");
 .NavigationBar {
-    background-color: black;
+    background-color: black !important;
     border-bottom: 1px solid white;
     box-shadow: black 0 0 20px;
+    padding: 0 !important;
 }
 .NavigationBar * {
     color: white !important;
+    background-color: black !important;
 }
 .searchInput {
     background-color: #333 !important;
@@ -14,4 +16,7 @@
 }
 .searchInput::placeholder {
     color: gray !important;
+}
+.offCanvasNavigationBar {
+    background-color: black !important;
 }
