--- a/src/Styles/MovieSearch.css
+++ b/src/Styles/MovieSearch.css
@@ -6,7 +6,7 @@
     padding: px;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.29);
     border-radius: 1em;
-    min-height: 300px !important;
+    min-height: 90vh;
     background-image: url("../assets/BackgroundImage.jpg") !important;
     background-repeat: no-repeat;
     background-size: auto;
