--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -20,3 +20,7 @@
 .offCanvasNavigationBar {
     background-color: black !important;
 }
+.nav-link :hover {
+    color: rgb(207, 207, 207) !important;
+    transition: 300ms;
+}
