--- a/src/Styles/watchlistMovie.css
+++ b/src/Styles/watchlistMovie.css
@@ -1,6 +1,11 @@
 .watchlistCard {
     background-color: rgb(39, 39, 39) !important;
 }
-.sign-in-link {
-    text-decoration: dashed !important;
+select[disabled] {
+    border: 1px solid gray !important;
+    color: gray !important;
+    background-color: rgb(63, 63, 63) !important;
+}
+.total-price-rented {
+    color: gray !important;
 }
